# Homomorphic-AES

./: CMakeLists.txt  README.md  build_and_run.sh
sources/: CMakeLists.txt  homo_aes.cpp  homo_aes.h  keyswitch.cpp  keyswitch.h  main.cpp  tables.cpp  tables.h  tree_mvb.cpp  tree_mvb.h  utils.cpp  utils.h
